--- a/index2.html
+++ b/index2.html
@@ -17,10 +17,10 @@
     </div>    
        <div class="form-body">
             <h1 class="form-title">Venda fácil seu carro!</h1>
-            <p>Descreva as caracteristicas do seu carro.</p>
+            <p>Descreva as caracteristicas do seu carro:</p>
       <form>      
         <div class="box-input">
-        <label for="title">Titulo do anuncio <span class="required-field">*</span>
+        <label for="title">Título do anúncio <span class="required-field">*</span>
         </label>
         <input 
         type="text"
@@ -45,7 +45,7 @@
             required
             />
             <div class="box-input">
-                <label for="title">Titulo do anúncio <span class="required-field">*</span>
+                <label for="title">Título do anúncio <span class="required-field">*</span>
                 </label>
                 <input 
                 type="text"
@@ -88,14 +88,14 @@
                         />
                         <div class="box-input">
                             <label for="brand"
-                            >kilometragem<span class="required-field">*</span>
+                            >Quilometragem<span class="required-field">*</span>
                             </label>
                             <input 
                             type="number"
-                            name="kilometragem"
-                            id="kilometrsgem"
+                            name="quilometragem"
+                            id="quilometragem"
                             class="block"
-                            placeholder="digite a kilometragem do seu veiculo" 
+                            placeholder="digite a quilometragem do seu veiculo" 
                             required
                             />
                             <div class="box-input">
