--- a/site - aluguel de carros.html
+++ b/site - aluguel de carros.html
@@ -3,13 +3,13 @@
 <head>
     <link rel="stylesheet" href="./style.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.1">
     <title>Document</title>
 </head>
 <body>
 <div class="container">
     <div class="header">
-      <h3>Cadastre seu veiculo para vender mais rápido</h3>
+      <h3>Cadastre seu veiculo para vender mais rápido.</h3>
     </div>
     <div class="form-container">
     <div class="form-header">
